--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,3 +1,12 @@
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
