--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,3 +5,7 @@
 @import "global/variables.less";
 @import "global/fonts.less";
 @import "global/global.less";
+
+//Blocks
+
+@import "blocks/page.less";
