Добавляет переменные специфических цветов

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,6 +1,9 @@
 // Colors
 
+@white: white;
+
 @basic-blue: #161C35;
+@basic-blue-other: #192144;
 @basic-blue-light: #1D2E5B;
 @basic-steelblue: #EDEFF6;
 @basic-yellow: #FFD74B;
@@ -10,3 +13,4 @@
 @special-grey: #444444;
 @special-red: #F47E7E;
 @special-orange: #FF8D30;
+@special-orange-dark: #F26926;
