Задает блокам шапки шрифты, цвета и внутренние отступы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,3 +9,12 @@
 //Blocks
 
 @import "blocks/page.less";
+@import "blocks/page-body.less";
+@import "blocks/button.less";
+
+@import "blocks/page-header.less";
+@import "blocks/top-bar.less";
+@import "blocks/menu.less";
+@import "blocks/navigation.less";
+@import "blocks/contacts.less";
+@import "blocks/user-buttons.less";
