Добавляет шрифты, фоны и отступы основному контенту главной

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -14,6 +14,14 @@
   &:active {
     color: fade(@basic-yellow, 30%);
   }
+
+  &--yellow {
+    color: @basic-yellow;
+  }
+}
+
+.contacts__icon {
+  fill: @basic-yellow;
 }
 
 .contacts__link:hover .contacts__icon {
