--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,6 +1,8 @@
 // Colors
 
 @white: white;
+@black: black;
+@red: red;
 
 @basic-blue: #161C35;
 @basic-blue-other: #192144;
@@ -9,8 +11,25 @@
 @basic-yellow: #FFD74B;
 
 @special-yellow-dark: #FFBD30;
+@special-blue: #132576;
 @special-blue-light: #DFE3F0;
+@special-blue-dark: #101D41;
 @special-grey: #444444;
 @special-red: #F47E7E;
 @special-orange: #FF8D30;
+@special-orange-light: #FFA530;
 @special-orange-dark: #F26926;
+
+@color-thailand: #116b7e;
+@color-france: #d8c1ba;
+@color-czech: #584c4a;
+
+@color-belgium-flag: #ffd756;
+@color-czech-flag: #ed5565;
+@color-france-flag: #f5f7fa;
+@color-seychelles-flag: #ff5466;
+@color-sri-lanka-flag: #ff5466;
+@color-thailand-flag: #3c57ad;
+
+@color-tanya: #70b4b9;
+@color-petya: #1d2d37;
