--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,13 +4,15 @@
 
 @import "global/variables.less";
 @import "global/fonts.less";
+@import "global/mixins.less";
 @import "global/global.less";
 
-//Blocks
+// Blocks
 
 @import "blocks/page.less";
 @import "blocks/page-body.less";
 @import "blocks/button.less";
+@import "blocks/tooltip.less";
 
 @import "blocks/page-header.less";
 @import "blocks/top-bar.less";
@@ -18,3 +20,24 @@
 @import "blocks/navigation.less";
 @import "blocks/contacts.less";
 @import "blocks/user-buttons.less";
+
+@import "blocks/page-main.less";
+@import "blocks/promo.less";
+@import "blocks/review.less";
+@import "blocks/features.less";
+@import "blocks/about.less";
+@import "blocks/rates.less";
+@import "blocks/address.less";
+
+@import "blocks/feedback.less";
+@import "blocks/feedback-form.less";
+
+@import "blocks/country-card.less";
+
+@import "blocks/companions.less";
+@import "blocks/companion-card.less";
+@import "blocks/flags-list.less";
+@import "blocks/transport-list.less";
+
+@import "blocks/level-badge.less";
+
