--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,6 +20,7 @@
 @import "blocks/navigation.less";
 @import "blocks/contacts.less";
 @import "blocks/user-buttons.less";
+@import "blocks/socials.less";
 
 @import "blocks/page-main.less";
 @import "blocks/promo.less";
@@ -41,3 +42,5 @@
 
 @import "blocks/level-badge.less";
 
+@import "blocks/page-footer.less";
+@import "blocks/copyright.less";
