--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -15,6 +15,7 @@
 @special-blue-light: #DFE3F0;
 @special-blue-dark: #101D41;
 @special-grey: #444444;
+@special-grey-light: #F3F4F8;
 @special-red: #F47E7E;
 @special-orange: #FF8D30;
 @special-orange-light: #FFA530;
