Добавляет фоновые картинки

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -1,6 +1,8 @@
 .about {
   padding: 33px 50px 82px;
-  background-color: @basic-blue;
+  background-image: url("../../img/backgrounds/about-mobile.png");
+  background-repeat: no-repeat;
+  background-color: @basic-blue-other;
 }
 
 .about__text {
