--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,3 +1,5 @@
 .page-header {
+  background-image: url("../../img/backgrounds/globe-back-mobile.jpg");
+  background-repeat: no-repeat;
   background-color: @basic-blue;
 }
