--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -3,12 +3,12 @@
 
   &--top {
     color: @white;
-    background-color: @basic-blue;
+    background-color: @basic-blue-other-dark;
   }
 
   &--dark {
     color: @white;
-    background-color: @basic-blue;
+    background-color: @basic-blue-other;
   }
 
   &--light {
