--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -6,6 +6,7 @@
 
 @basic-blue: #161C35;
 @basic-blue-other: #192144;
+@basic-blue-other-dark: #161C35;
 @basic-blue-light: #1D2E5B;
 @basic-steelblue: #EDEFF6;
 @basic-yellow: #FFD74B;
