Исправляет ошибки после линтера

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,19 +1,18 @@
 // Global
 
 @import "normalize.less";
-
 @import "global/variables.less";
 @import "global/fonts.less";
 @import "global/mixins.less";
 @import "global/global.less";
 
-// Blocks
-
+// Blocks -- general
 @import "blocks/page.less";
 @import "blocks/page-body.less";
 @import "blocks/button.less";
 @import "blocks/tooltip.less";
 
+// Blocks -- header
 @import "blocks/page-header.less";
 @import "blocks/top-bar.less";
 @import "blocks/menu.less";
@@ -22,6 +21,7 @@
 @import "blocks/user-buttons.less";
 @import "blocks/socials.less";
 
+// Blocks -- main content
 @import "blocks/page-main.less";
 @import "blocks/promo.less";
 @import "blocks/review.less";
@@ -30,19 +30,23 @@
 @import "blocks/rates.less";
 @import "blocks/address.less";
 
+// Blocks -- feedback block
 @import "blocks/feedback.less";
 @import "blocks/feedback-form.less";
 
+// Blocks -- countries block
 @import "blocks/country-card.less";
 
+// Blocks -- companions block
 @import "blocks/companions.less";
 @import "blocks/companion-card.less";
 @import "blocks/flags-list.less";
 @import "blocks/transport-list.less";
-
 @import "blocks/level-badge.less";
 
+// Blocks -- footer
 @import "blocks/page-footer.less";
 @import "blocks/copyright.less";
 
+//Blocks -- modal
 @import "blocks/modal.less";
