Убирает normalize.less

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,5 @@
 // Global
-
-@import "normalize.less";
+// @import "normalize.less";
 @import "global/variables.less";
 @import "global/fonts.less";
 @import "global/mixins.less";
