Поправляет блоки после ревью

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -17,4 +17,9 @@
     color: fade(@basic-blue, 30%);
     background-color: @special-yellow-dark;
   }
+
+  &--index {
+    .fontsize(18px);
+    text-transform: none;
+  }
 }
