--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,6 +11,7 @@
 @import "blocks/button.less";
 @import "blocks/tooltip.less";
 
+
 // Blocks -- header
 @import "blocks/page-header.less";
 @import "blocks/top-bar.less";
@@ -29,6 +30,13 @@
 @import "blocks/rates.less";
 @import "blocks/address.less";
 
+// Blocks -- form
+@import "blocks/form.less";
+@import "blocks/number-input.less";
+@import "blocks/calendar.less";
+@import "blocks/select-country.less";
+@import "blocks/descriptions.less";
+
 // Blocks -- feedback block
 @import "blocks/feedback.less";
 @import "blocks/feedback-form.less";
@@ -42,6 +50,15 @@
 @import "blocks/flags-list.less";
 @import "blocks/transport-list.less";
 @import "blocks/level-badge.less";
+
+// Blocks -- user profile block
+@import "blocks/user-profile.less";
+
+// Blocks -- plans
+@import "blocks/plans-list.less";
+@import "blocks/steps-tracker.less";
+@import "blocks/add-plan.less";
+@import "blocks/step.less";
 
 // Blocks -- footer
 @import "blocks/page-footer.less";
