--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,4 +2,9 @@
   background-image: url("../../img/backgrounds/globe-back-mobile.jpg");
   background-repeat: no-repeat;
   background-color: @basic-blue;
+
+  &--inner {
+    background-image: none;
+    background-color: @basic-blue-inner;
+  }
 }
