--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -7,6 +7,7 @@
 @basic-blue: #161C35;
 @basic-blue-other: #192144;
 @basic-blue-other-dark: #161C35;
+@basic-blue-inner: #182044;
 @basic-blue-light: #1D2E5B;
 @basic-steelblue: #EDEFF6;
 @basic-yellow: #FFD74B;
@@ -15,9 +16,12 @@
 @special-blue: #132576;
 @special-blue-light: #DFE3F0;
 @special-blue-dark: #101D41;
+@special-steelblue: #D1D7E9;
+@special-steelblue-dark: #D4D9EB;
 @special-grey: #444444;
 @special-grey-light: #F3F4F8;
 @special-red: #F47E7E;
+@special-red-saturated: #FF5C23;
 @special-orange: #FF8D30;
 @special-orange-light: #FFA530;
 @special-orange-dark: #F26926;
