--- a/source/less/blocks/step.less
+++ b/source/less/blocks/step.less
@@ -1,1 +1,14 @@
-// step block
+.step {
+  padding: 24px 25px 23px;
+  background-color: @white;
+}
+
+.step__title {
+  font-weight: 700;
+  .fontsize(20px);
+  color: @basic-blue-light;
+}
+
+.step__description {
+  font-weight: 400;
+}
