Дорабатывает стили после ревью

--- a/source/less/blocks/select-country.less
+++ b/source/less/blocks/select-country.less
@@ -14,7 +14,7 @@
   cursor: pointer;
 
   &--selected {
-    background-color: @basic-steelblue;
+    background-color: @basic-blue-light;
   }
 }
 
