--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,7 +1,10 @@
 .contacts {
+  margin: 0;
+  padding: 0;
   font-weight: 700;
   line-height: 18px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .contacts__link {
