--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -5,6 +5,12 @@
   text-transform: uppercase;
 }
 
+.navigation__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .navigation__item {
   text-align: center;
 }
