--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -1,3 +1,9 @@
+.socials {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .socials__link {
   &--yellow-bg {
     background-color: @basic-yellow;
