Импортирует блоки каталога

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,7 +11,6 @@
 @import "blocks/button.less";
 @import "blocks/tooltip.less";
 
-
 // Blocks -- header
 @import "blocks/page-header.less";
 @import "blocks/top-bar.less";
@@ -54,11 +53,21 @@
 // Blocks -- user profile block
 @import "blocks/user-profile.less";
 
-// Blocks -- plans
+// Blocks -- plans block
 @import "blocks/plans-list.less";
 @import "blocks/steps-tracker.less";
 @import "blocks/add-plan.less";
 @import "blocks/step.less";
+
+// Blocks -- filter block
+@import "blocks/filter-country.less";
+@import "blocks/filter-catalog.less";
+
+// Blocks -- catalog block
+@import "blocks/catalog.less";
+@import "blocks/traveler-card.less";
+@import "blocks/traveler-info.less";
+@import "blocks/pagination.less";
 
 // Blocks -- footer
 @import "blocks/page-footer.less";
