--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -13,6 +13,12 @@
   color: @basic-blue-light;
 }
 
+.form__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .form__label {
   font-weight: 500;
   .fontsize(16px);
