--- a/source/less/blocks/traveler-card.less
+++ b/source/less/blocks/traveler-card.less
@@ -1,1 +1,35 @@
-// traveler-card block
+.traveler-card {
+  padding: 15px 18px 23px;
+  background-color: @white;
+}
+
+.traveler-card__name {
+  .interactions-opacity();
+}
+
+.traveler-card__profile-link {
+  font-weight: 700;
+  .fontsize(20px);
+  color: @basic-blue-light;
+}
+
+.traveler-card__likes-counter {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: @basic-blue;
+}
+
+.traveler-card__tags {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+}
+
+.traveler-card__level-title {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 16px;
+  text-transform: lowercase;
+}
