--- a/source/less/blocks/traveler-info.less
+++ b/source/less/blocks/traveler-info.less
@@ -1,1 +1,20 @@
-// traveler-info block
+.traveler-info__title {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 16px;
+  text-transform: lowercase;
+}
+
+.traveler-info__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.traveler-info__item {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: @basic-blue-light;
+}
