--- a/source/less/global/mixins.less
+++ b/source/less/global/mixins.less
@@ -12,3 +12,13 @@
     color: fade(@value, 30%);
   }
 }
+
+.interactions-opacity {
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
