--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -13,11 +13,14 @@
 @basic-yellow: #FFD74B;
 
 @special-yellow-dark: #FFBD30;
+@special-yellow-faded: #F3C72B;
 @special-blue: #132576;
 @special-blue-light: #DFE3F0;
 @special-blue-dark: #101D41;
 @special-steelblue: #D1D7E9;
 @special-steelblue-dark: #D4D9EB;
+@special-darkblue: #D6DAED;
+@special-darkblue-dark: #C8CEE8;
 @special-grey: #444444;
 @special-grey-light: #F3F4F8;
 @special-red: #F47E7E;
