--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,1 +1,18 @@
-// catalog block
+.catalog {
+  padding: 0 25px 62px;
+}
+
+.catalog__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.catalog__more-link {
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  color: @basic-blue-light;
+}
