--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -33,6 +33,12 @@
   &--orange {
     color: @special-orange;
   }
+
+  &--uppercase {
+    font-size: 16px;
+    line-height: 18px;
+    text-transform: uppercase;
+  }
 }
 
 // Inner pages
