--- a/source/less/blocks/top-bar.less
+++ b/source/less/blocks/top-bar.less
@@ -1,3 +1,11 @@
 .top-bar {
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 73px;
   padding: 25px 25px 0;
+  background-color: @white;
+
+  @media (min-width: 1440px) {
+    background-color: transparent;
+  }
 }
