--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,11 +14,12 @@
 // Blocks -- header
 @import "blocks/page-header.less";
 @import "blocks/top-bar.less";
-@import "blocks/menu.less";
+@import "blocks/logo.less";
 @import "blocks/navigation.less";
 @import "blocks/contacts.less";
 @import "blocks/user-buttons.less";
 @import "blocks/socials.less";
+@import "blocks/menu.less";
 
 // Blocks -- main content
 @import "blocks/page-main.less";
