--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -1,10 +1,20 @@
 .socials {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .socials__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+  height: 45px;
+
   &--yellow-bg {
     background-color: @basic-yellow;
 
