Добавляет цвета и вьюпорты в переменные

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,5 +1,4 @@
 // Colors
-
 @white: white;
 @black: black;
 @red: red;
@@ -23,8 +22,14 @@
 @special-darkblue-dark: #C8CEE8;
 @special-grey: #444444;
 @special-grey-light: #F3F4F8;
+@special-grey-lightest: #F2F2F2;
 @special-red: #F47E7E;
 @special-red-saturated: #FF5C23;
 @special-orange: #FF8D30;
 @special-orange-light: #FFA530;
 @special-orange-dark: #F26926;
+
+// Viewports
+@mobile-width-only: 767px;
+@tablet-width: 768px;
+@desktop-width: 1440px;
