Импортирует недостающие блоки главной

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,10 +23,12 @@
 
 // Blocks -- main content
 @import "blocks/page-main.less";
-@import "blocks/promo.less";
 @import "blocks/review.less";
+@import "blocks/promo.less";
 @import "blocks/features.less";
 @import "blocks/about.less";
+@import "blocks/countries.less";
+@import "blocks/table.less";
 @import "blocks/rates.less";
 @import "blocks/address.less";
 
@@ -46,10 +48,10 @@
 
 // Blocks -- companions block
 @import "blocks/companions.less";
-@import "blocks/companion-card.less";
 @import "blocks/flags-list.less";
 @import "blocks/transport-list.less";
 @import "blocks/level-badge.less";
+@import "blocks/companion-card.less";
 
 // Blocks -- user profile block
 @import "blocks/user-profile.less";
